--- a/tracking.css
+++ b/tracking.css
@@ -43,13 +43,57 @@
   background: transparent;
   color: blanchedalmond;
 }
-.containertrack > button {
+.containertrack > input[type='submit'] {
   margin-top: 10px;
   width: 50%;
 }
 .containertrack > input:hover {
   border: 4px solid yellowgreen;
 }
-.containertrack > button:hover {
+
+.containertrack > input[type='submit']:hover {
   background: yellowgreen;
+}
+.thanks {
+  text-align: center;
+}
+
+/* containertrack2*/
+.containertrack2 {
+  width: 50%;
+  height: 300px;
+  background-image: url('slide2.jpg');
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  color: white;
+  margin: 0 auto;
+  padding-top: 60px;
+}
+.containertrack2 > h3 {
+  margin-top: 0px;
+}
+.containertrack2 > p {
+  font-weight: lighter;
+}
+.containertrack2 > input {
+  width: 50%;
+  background: transparent;
+  color: blanchedalmond;
+}
+.containertrack2 > input[type='submit'] {
+  margin-top: 10px;
+  width: 50%;
+}
+.containertrack2 > input:hover {
+  border: 4px solid yellowgreen;
+}
+
+.containertrack2 > input[type='submit']:hover {
+  background: yellowgreen;
+}
+@media only screen and (max-width: 820px) {
+  .containertrack2 {
+    width: 100%;
+  }
 }
